// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`batch request serializer serializeBatchRequest serializes payload for batch subrequests 1`] = `
"--batch_fixed_boundary_for_testing
Content-Type: multipart/mixed; boundary=changeSet_boundary

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary

POST /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"StringProperty\\":\\"value\\"}

--changeSet_boundary--
--batch_fixed_boundary_for_testing
Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: b2604715-7142-4c25-ac80-b19da2da498e

GET /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity?$format=json HTTP/1.1
Content-Type: application/json
Accept: application/json


--batch_fixed_boundary_for_testing
Content-Type: multipart/mixed; boundary=changeSet_boundary

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary

PATCH /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=guidId,KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"StringProperty\\":\\"value\\"}

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary

DELETE /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=testId,KeyPropertyString='test') HTTP/1.1
Content-Type: application/json
Accept: application/json



--changeSet_boundary--
--batch_fixed_boundary_for_testing
Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: ac98decf-e7ff-4e9a-8a5f-09a6d7000f42

GET /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=testId,KeyPropertyString='test')?$format=json HTTP/1.1
Content-Type: application/json
Accept: application/json


--batch_fixed_boundary_for_testing--
"
`;

exports[`batch request serializer serializeChangeSet serializes change set with multiple operations 1`] = `
"Content-Type: multipart/mixed; boundary=changeSet_boundary

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary

PATCH /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=guidId,KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"StringProperty\\":\\"value\\"}

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary

POST /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"StringProperty\\":\\"value\\"}

--changeSet_boundary--"
`;

exports[`batch request serializer serializeChangeSet serializes change set with one operation 1`] = `
"Content-Type: multipart/mixed; boundary=changeSet_boundary

--changeSet_boundary
Content-Type: application/http
Content-Transfer-Encoding: binary

POST /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"StringProperty\\":\\"value\\"}

--changeSet_boundary--"
`;

exports[`batch request serializer serializeRequest serializes create request 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

POST /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"StringProperty\\":\\"value\\"}
"
`;

exports[`batch request serializer serializeRequest serializes delete request with eTag 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

DELETE /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=guidId,KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json
Some-Implementation-For-Test: eTag


"
`;

exports[`batch request serializer serializeRequest serializes delete request with entity 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

DELETE /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=guidId,KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json


"
`;

exports[`batch request serializer serializeRequest serializes delete request with id 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

DELETE /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=testId,KeyPropertyString='test') HTTP/1.1
Content-Type: application/json
Accept: application/json


"
`;

exports[`batch request serializer serializeRequest serializes getAll request 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: 1472d518-61d9-461e-a337-fc29a9e93391

GET /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity?$format=json HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes getAll request with absolute sub request path 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: b14cd521-05a3-4f15-bab8-9db7dbd7ea8f

GET http://example.com/sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity?$format=json HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes getAll request with custom headers 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: c77d1f02-5a47-4c2c-89e2-b3e8b8c7d92c

GET /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity?$format=json HTTP/1.1
Content-Type: application/json
Accept: application/json
Custom-Header: custom

"
`;

exports[`batch request serializer serializeRequest serializes getAll request with entity relative sub request path 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: 18129a6b-47c5-487f-ad45-51fbf4e58ff3

GET /A_CommonEntity?$format=json HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes getAll request with filter 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: 1acfe6c7-a30f-44b6-98a5-bb806738dafe

GET /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity?$format=json&$filter=(StringProperty%20eq%20'test') HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes getByKey request 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary
Content-Id: 602dadc4-2c51-4cc6-baf0-0da52dbd4839

GET /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=testId,KeyPropertyString='test')?$format=json HTTP/1.1
Content-Type: application/json
Accept: application/json

"
`;

exports[`batch request serializer serializeRequest serializes update request 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

PATCH /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=guidId,KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"StringProperty\\":\\"value\\"}
"
`;

exports[`batch request serializer serializeRequest serializes update request using put 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

PUT /sap/opu/odata/sap/API_COMMON_SRV/A_CommonEntity(KeyPropertyGuid=guidId,KeyPropertyString='strId') HTTP/1.1
Content-Type: application/json
Accept: application/json

{\\"KeyPropertyGuid\\":\\"guidId\\",\\"KeyPropertyString\\":\\"strId\\",\\"StringProperty\\":\\"value\\"}
"
`;
